trace_event: Don't initialize thread trace buffer during thread shutdown

If we try to record a trace event during MessageLoop shutdown, we can
get to a state where the MessageLoop is present but the thread task
runner handle has been reset. Since we require both in order to
initialize the thread local event buffer, this patch makes sure the
initialization is skipped if that condition isn't met.

Bug: 906795
Change-Id: I9ead620573387f8c329d954425ef43c60547bbef
Reviewed-on: https://chromium-review.googlesource.com/c/1343263
Reviewed-by: Eric Seckler <eseckler@chromium.org>
Reviewed-by: Primiano Tucci <primiano@chromium.org>
Commit-Queue: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609677}
Former-commit-id: 95f6363a1d4fd53b39aa00ef02bc70a1df318bca